--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "repository": "https://github.com/Raphjacksun7/redis-impot-nodejs.git",
   "author": "Raphael AVOCEGAMOU",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
     "express": "^4.17.1",
     "redis": "^4.0.1",
